welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    avance()
    getCouleurSol()
   var x : String = getCouleurSol()
    recule()
    while(X==Color.green){
    	avance()
    	
    }
}        
